--- a/css/blocks/mapandfooter.css
+++ b/css/blocks/mapandfooter.css
@@ -4,10 +4,7 @@
   display: flex;
   position: relative;
   width: 100%;
-  height: 100vh;
-  background-image: url(../img/map.png);
-  background-repeat: no-repeat;
-  background-size: cover; }
+  height: 100vh; }
 
 .footer {
   display: -webkit-box;
@@ -17,6 +14,7 @@
   -ms-flex-pack: center;
   justify-content: center;
   position: absolute;
+  z-index: 10;
   width: 100%;
   bottom: 0;
   height: 3.75rem;
@@ -134,3 +132,43 @@
 .footer-icon:hover {
   background-color: #fff;
   fill: #000; }
+
+.page__indicator {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: fixed;
+  top: 10%;
+  right: 10%; }
+
+.data__menu .data__circle {
+  position: relative;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #fff; }
+
+.data__menu .active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 13px;
+  height: 13px;
+  border: solid 1px #fff;
+  border-radius: 50%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 16px;
+  top: 5%;
+  right: 5%; }
+
+.data__menu {
+  position: unset !important; }
