--- a/css/blocks/mapandfooter.scss
+++ b/css/blocks/mapandfooter.scss
@@ -28,9 +28,7 @@ $phones: 480px;
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url(../img/map.png);
-  background-repeat: no-repeat;
-  background-size: cover; }
+}
 
 .footer {
   display: -webkit-box;
@@ -40,6 +38,7 @@ $phones: 480px;
   -ms-flex-pack: center;
   justify-content: center;
   position: absolute;
+  z-index: 10;
   width: 100%;
   bottom: 0;
   height: 3.75rem;
@@ -151,4 +150,38 @@ $phones: 480px;
 .footer-icon:hover{
   background-color: #fff;
   fill: #000; 
+}
+
+
+.page__indicator{
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 10%;
+  right: 10%;
+}
+
+.data__menu .data__circle {
+  position: relative;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+.data__menu .active {
+  display: flex;
+  width: 13px;
+  height: 13px;
+  border: solid 1px #fff;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  margin-top: 16px;
+  top: 5%;
+  right: 5%;
+
+}
+.data__menu{
+ position: unset !important;
 }
