--- a/css/blocks/team.css
+++ b/css/blocks/team.css
@@ -254,3 +254,42 @@
 .team__acordeon:hover .pre-name__triagle {
   border-width: 0.4375rem 0.25rem 0 0.25rem;
   border-color: #f9b33b transparent transparent transparent; }
+
+.work__page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-image: url(../img/bg-video.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.work__page-txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  widows: 100%;
+  height: auto;
+  text-align: center;
+  font-family: 'Gagalin-Regular';
+  font-size: 3.8125rem;
+  font-weight: 400;
+  line-height: 3.375rem; }
+
+.work__page_video-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: auto;
+  height: 62%; }
