--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -203,3 +203,35 @@ $phones: 480px;
 		border-color: #f9b33b transparent transparent transparent;
 	}
 }
+
+
+
+.work__page{
+	display: flex;
+	width: 100vw;
+	height: 100vh;
+	justify-content: space-evenly;
+	flex-direction: column;
+	align-items: center;
+	background-image: url(../img/bg-video.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.work__page-txt{
+	display: flex;
+	widows: 100%;
+	height: auto;
+	text-align: center;
+	font-family: 'Gagalin-Regular';
+	font-size: 3.8125rem;
+	font-weight: 400;
+	line-height: 3.375rem;
+}
+
+
+.work__page_video-container{
+	display: flex;
+	width: auto;
+	height: 62%;
+}
