--- a/css/main.css
+++ b/css/main.css
@@ -1405,6 +1405,45 @@ ul {
   border-width: 0.4375rem 0.25rem 0 0.25rem;
   border-color: #f9b33b transparent transparent transparent; }
 
+.work__page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-image: url(../img/bg-video.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.work__page-txt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  widows: 100%;
+  height: auto;
+  text-align: center;
+  font-family: 'Gagalin-Regular';
+  font-size: 3.8125rem;
+  font-weight: 400;
+  line-height: 3.375rem; }
+
+.work__page_video-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: auto;
+  height: 62%; }
+
 .menu__page {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1972,10 +2011,7 @@ ul {
   display: flex;
   position: relative;
   width: 100%;
-  height: 100vh;
-  background-image: url(../img/map.png);
-  background-repeat: no-repeat;
-  background-size: cover; }
+  height: 100vh; }
 
 .footer {
   display: -webkit-box;
@@ -1985,6 +2021,7 @@ ul {
   -ms-flex-pack: center;
   justify-content: center;
   position: absolute;
+  z-index: 10;
   width: 100%;
   bottom: 0;
   height: 3.75rem;
@@ -2102,6 +2139,46 @@ ul {
 .footer-icon:hover {
   background-color: #fff;
   fill: #000; }
+
+.page__indicator {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  position: fixed;
+  top: 10%;
+  right: 10%; }
+
+.data__menu .data__circle {
+  position: relative;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #fff; }
+
+.data__menu .active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 13px;
+  height: 13px;
+  border: solid 1px #fff;
+  border-radius: 50%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 16px;
+  top: 5%;
+  right: 5%; }
+
+.data__menu {
+  position: unset !important; }
 
 .slider__menu {
   display: -webkit-box;
